--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,59 +10,59 @@ permissions:
     contents: read # to fetch code (actions/checkout)
 
 jobs:
-    linux:
-        name: Linux (python=${{ matrix.pyver }} cc=${{ matrix.cc }} sanitize=${{ matrix.sanitize }})
-        runs-on: ubuntu-latest
-        env:
-            CC: ${{ matrix.cc }}
-            KITTY_SANITIZE: ${{ matrix.sanitize }}
-
-        strategy:
-            matrix:
-                python: [a, b, c]
-                cc: [gcc, clang]
-                include:
-                    - python: a
-                      pyver: "3.9"
-                      sanitize: 0
-
-                    - python: b
-                      pyver: "3.10"
-                      sanitize: 1
-
-                    - python: c
-                      pyver: "3.11"
-                      sanitize: 1
-
-                exclude:
-                    - python: a
-                      cc: clang
-                    - python: b
-                      cc: clang
-                    - python: c
-                      cc: gcc
-
-        steps:
-            - name: Checkout source code
-              uses: actions/checkout@v3
-              with:
-                  fetch-depth: 10
-
-            - name: Set up Python ${{ matrix.pyver }}
-              uses: actions/setup-python@v4
-              with:
-                  python-version: ${{ matrix.pyver }}
-
-            - name: Install Go
-              uses: actions/setup-go@v4
-              with:
-                  go-version-file: go.mod
-
-            - name: Build kitty
-              run: python .github/workflows/ci.py build
-
-            - name: Test kitty
-              run: python .github/workflows/ci.py test
+    # linux:
+    #     name: Linux (python=${{ matrix.pyver }} cc=${{ matrix.cc }} sanitize=${{ matrix.sanitize }})
+    #     runs-on: ubuntu-latest
+    #     env:
+    #         CC: ${{ matrix.cc }}
+    #         KITTY_SANITIZE: ${{ matrix.sanitize }}
+    #
+    #     strategy:
+    #         matrix:
+    #             python: [a, b, c]
+    #             cc: [gcc, clang]
+    #             include:
+    #                 - python: a
+    #                   pyver: "3.9"
+    #                   sanitize: 0
+    #
+    #                 - python: b
+    #                   pyver: "3.10"
+    #                   sanitize: 1
+    #
+    #                 - python: c
+    #                   pyver: "3.11"
+    #                   sanitize: 1
+    #
+    #             exclude:
+    #                 - python: a
+    #                   cc: clang
+    #                 - python: b
+    #                   cc: clang
+    #                 - python: c
+    #                   cc: gcc
+    #
+    #     steps:
+    #         - name: Checkout source code
+    #           uses: actions/checkout@v3
+    #           with:
+    #               fetch-depth: 10
+    #
+    #         - name: Set up Python ${{ matrix.pyver }}
+    #           uses: actions/setup-python@v4
+    #           with:
+    #               python-version: ${{ matrix.pyver }}
+    #
+    #         - name: Install Go
+    #           uses: actions/setup-go@v4
+    #           with:
+    #               go-version-file: go.mod
+    #
+    #         - name: Build kitty
+    #           run: python .github/workflows/ci.py build
+    #
+    #         - name: Test kitty
+    #           run: python .github/workflows/ci.py test
 
     linux-package:
         name: Linux package
@@ -135,61 +135,61 @@ jobs:
                   name: artifact-kitten
                   path: kitty/launcher
 
-    bundle:
-        name: Bundle test (${{ matrix.os }})
-        runs-on: ${{ matrix.os }}
-        strategy:
-            matrix:
-                os: [ubuntu-latest, macos-latest]
-        env:
-            KITTY_BUNDLE: 1
-        steps:
-            - name: Checkout source code
-              uses: actions/checkout@v3
-              with:
-                  fetch-depth: 10
-
-            - name: Install Go
-              uses: actions/setup-go@v4
-              with:
-                  go-version-file: go.mod
-
-            - name: Build kitty
-              run: which python3 && python3 .github/workflows/ci.py build
-
-            - name: Test kitty
-              run: python3 .github/workflows/ci.py test
-
-    brew:
-        name: macOS Brew
-        runs-on: macos-latest
-        steps:
-            - name: Checkout source code
-              uses: actions/checkout@v3
-              with:
-                  fetch-depth: 0 # needed for :commit: docs role
-
-            - name: Set up Python
-              uses: actions/setup-python@v4
-              with:
-                  python-version: "3.10"
-
-            - name: Install Go
-              uses: actions/setup-go@v4
-              with:
-                  go-version-file: go.mod
-
-            - name: Build kitty
-              run: python3 .github/workflows/ci.py build
-
-            - name: Test kitty
-              run: python3 .github/workflows/ci.py test
-
-            - name: Install deps for docs
-              run: python3 -m pip install -r docs/requirements.txt
-
-            - name: Builds docs
-              run: make FAIL_WARN=1 docs
-
-            - name: Build kitty package
-              run: python3 .github/workflows/ci.py package
+    # bundle:
+    #     name: Bundle test (${{ matrix.os }})
+    #     runs-on: ${{ matrix.os }}
+    #     strategy:
+    #         matrix:
+    #             os: [ubuntu-latest, macos-latest]
+    #     env:
+    #         KITTY_BUNDLE: 1
+    #     steps:
+    #         - name: Checkout source code
+    #           uses: actions/checkout@v3
+    #           with:
+    #               fetch-depth: 10
+    #
+    #         - name: Install Go
+    #           uses: actions/setup-go@v4
+    #           with:
+    #               go-version-file: go.mod
+    #
+    #         - name: Build kitty
+    #           run: which python3 && python3 .github/workflows/ci.py build
+    #
+    #         - name: Test kitty
+    #           run: python3 .github/workflows/ci.py test
+    #
+    # brew:
+    #     name: macOS Brew
+    #     runs-on: macos-latest
+    #     steps:
+    #         - name: Checkout source code
+    #           uses: actions/checkout@v3
+    #           with:
+    #               fetch-depth: 0 # needed for :commit: docs role
+    #
+    #         - name: Set up Python
+    #           uses: actions/setup-python@v4
+    #           with:
+    #               python-version: "3.10"
+    #
+    #         - name: Install Go
+    #           uses: actions/setup-go@v4
+    #           with:
+    #               go-version-file: go.mod
+    #
+    #         - name: Build kitty
+    #           run: python3 .github/workflows/ci.py build
+    #
+    #         - name: Test kitty
+    #           run: python3 .github/workflows/ci.py test
+    #
+    #         - name: Install deps for docs
+    #           run: python3 -m pip install -r docs/requirements.txt
+    #
+    #         - name: Builds docs
+    #           run: make FAIL_WARN=1 docs
+    #
+    #         - name: Build kitty package
+    #           run: python3 .github/workflows/ci.py package
